Add controller and route to showcase how to add arrays of references to other collections
